project/logs/20250521_135856.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

complete create D3D12Device!!!

Hello,DirectX!

clintSize:1280,720

Begin CompileShader, path:Object3D.VS.hlsl,profile:vs_6_0

Object3D.VS.hlsl:27:20: error: functions that differ only in their return type cannot be overloaded
VertexShaderOutput main(VertexShaderInput input)
~~~~~~~~~~~~~~~~~~ ^
Object3D.VS.hlsl:8:8: note: previous definition is here
float4 main(float4 pos : POSITION) : SV_POSITION
~~~~~~ ^

